# lock-free_queues

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  analyze.py  analyze_lttng.py  benchmark.cpp  benchmark_tp.c  benchmark_tp.h  gitremote  lttng_benchmark.sh  presentation.html  presentation_notes.txt  queues.h  run.sh  struct  sum.py
docs/: presentation.html  presentation_notes.txt
include/: benchmark_harness.h  benchmark_harness_atomic_stat.h  benchmark_mpmc_tp.h
include/queues/: .two_lock_queue_old.h.swp  disruptor_queue.h  mutex_queue.h  old_ring_buffer_queue.h  ring_buffer_queue.h  scq_queue.h  two_lock_queue.h  two_lock_queue_hazard.h
results/: mutex_p16_c16.csv  mutex_p16_c8.csv  mutex_p1_c1.csv  mutex_p2_c2.csv  mutex_p4_c2.csv  mutex_p4_c4.csv  mutex_p8_c4.csv  mutex_p8_c8.csv  ringbuffer_p16_c16.csv  ringbuffer_p16_c8.csv  ringbuffer_p1_c1.csv  ringbuffer_p2_c2.csv  ringbuffer_p4_c2.csv  ringbuffer_p4_c4.csv  ringbuffer_p8_c4.csv  ringbuffer_p8_c8.csv  twolock_p16_c16.csv  twolock_p16_c8.csv  twolock_p1_c1.csv  twolock_p2_c2.csv  twolock_p4_c2.csv  twolock_p4_c4.csv  twolock_p8_c4.csv  twolock_p8_c8.csv
results/plots/: summary_table.csv
results/traces_mutex_p16_c16/ust/uid/1000/64-bit/: channel0_0  channel0_1  channel0_10  channel0_11  channel0_12  channel0_13  channel0_14  channel0_15  channel0_2  channel0_3  channel0_4  channel0_5  channel0_6  channel0_7  channel0_8  channel0_9  metadata
results/traces_mutex_p16_c8/ust/uid/1000/64-bit/: channel0_0  channel0_1  channel0_10  channel0_11  channel0_12  channel0_13  channel0_14  channel0_15  channel0_2  channel0_3  channel0_4  channel0_5  channel0_6  channel0_7  channel0_8  channel0_9  metadata
results/traces_mutex_p1_c1/ust/uid/1000/64-bit/: channel0_0  channel0_1  channel0_10  channel0_11  channel0_12  channel0_13  channel0_14  channel0_15  channel0_2  channel0_3  channel0_4  channel0_5  channel0_6  channel0_7  channel0_8  channel0_9  metadata
results/traces_mutex_p2_c2/ust/uid/1000/64-bit/: channel0_0  channel0_1  channel0_10  channel0_11  channel0_12  channel0_13  channel0_14  channel0_15  channel0_2  channel0_3  channel0_4  channel0_5  channel0_6  channel0_7  channel0_8  channel0_9  metadata
results/traces_mutex_p4_c2/ust/uid/1000/64-bit/: channel0_0  channel0_1  channel0_10  channel0_11  channel0_12  channel0_13  channel0_14  channel0_15  channel0_2  channel0_3  channel0_4  channel0_5  channel0_6  channel0_7  channel0_8  channel0_9  metadata
results/traces_mutex_p4_c4/ust/uid/1000/64-bit/: channel0_0  channel0_1  channel0_10  channel0_11  channel0_12  channel0_13  channel0_14  channel0_15  channel0_2  channel0_3  channel0_4  channel0_5  channel0_6  channel0_7  channel0_8  channel0_9  metadata
results/traces_mutex_p8_c4/ust/uid/1000/64-bit/: channel0_0  channel0_1  channel0_10  channel0_11  channel0_12  channel0_13  channel0_14  channel0_15  channel0_2  channel0_3  channel0_4  channel0_5  channel0_6  channel0_7  channel0_8  channel0_9  metadata
results/traces_mutex_p8_c8/ust/uid/1000/64-bit/: channel0_0  channel0_1  channel0_10  channel0_11  channel0_12  channel0_13  channel0_14  channel0_15  channel0_2  channel0_3  channel0_4  channel0_5  channel0_6  channel0_7  channel0_8  channel0_9  metadata
results/traces_ringbuffer_p16_c16/ust/uid/1000/64-bit/: channel0_0  channel0_1  channel0_10  channel0_11  channel0_12  channel0_13  channel0_14  channel0_15  channel0_2  channel0_3  channel0_4  channel0_5  channel0_6  channel0_7  channel0_8  channel0_9  metadata
results/traces_ringbuffer_p16_c8/ust/uid/1000/64-bit/: channel0_0  channel0_1  channel0_10  channel0_11  channel0_12  channel0_13  channel0_14  channel0_15  channel0_2  channel0_3  channel0_4  channel0_5  channel0_6  channel0_7  channel0_8  channel0_9  metadata
results/traces_ringbuffer_p1_c1/ust/uid/1000/64-bit/: channel0_0  channel0_1  channel0_10  channel0_11  channel0_12  channel0_13  channel0_14  channel0_15  (+9 more)
scripts/: analyze_lttng.py  analyze_results.py  run_benchmarks.sh
src/: benchmark_main.cpp  benchmark_mpmc_provider.c
src/queues/: mutex_queue.cpp  ring_buffer_queue.cpp  two_lock_queue.cpp
(+605 files in other folders)
